--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abhilash Srivastava - Personal Website</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -18,25 +20,47 @@
         </nav>
     </header>
     <main>
-        <section id="home">
-            <h1>Abhilash Srivastava</h1>
-            <p>Welcome to my personal website</p>
+        <section id="home" class="section">
+            <div class="container">
+                <h1>Abhilash Srivastava</h1>
+                <p>Welcome to my personal website</p>
+            </div>
         </section>
-        <section id="projects">
-            <h2>Projects</h2>
-            <p>Here are some of my projects...</p>
+        <section id="about" class="section">
+            <div class="container">
+                <h2>About Me</h2>
+                <p>I specialize in building Generative AI applications with a focus on Natural Language Processing (NLP), Machine Learning, Search, and Recommender Systems. Currently, I lead conversation focused machine learning initiatives at Apollo.io, where I develop 0-to-1 sales tech products that drive revenue and innovation.</p>
+                <p>Previously, I delivered high-impact, consumer-facing projects at Meta, Microsoft, Yelp, and Samsung Research. My work spans diverse domains, including Ads Integrity, Search Engines, Content Understanding, and IoT. At Meta, I developed fraud detection systems that improved Facebook Ads' revenue, while at Microsoft, I enhanced Search through Query Understanding and Natural Language Understanding (NLU). Additionally, I contribute to the AI4A (AI for Accessibility) Grants committee and am a reviewer for MLADS (Microsoft ML and Data Science Conference).</p>
+                <p>Throughout my career, I've secured multiple patents and published papers in international conferences. I’m passionate about EdTech and MOOCs, and I actively engage with the Coursera and PyTorch communities.</p>
+                <p>Let's connect if you’re interested in AI, EdTech, or exploring innovative machine-learning solutions!</p>
+                <p>PyTorch Contributions: <a href="https://discuss.pytorch.org/u/abhilash_srivastava/summary">https://discuss.pytorch.org/u/abhilash_srivastava/summary</a></p>
+                <p>GitHub: <a href="https://github.com/abhilashshakti">github.com/abhilashshakti</a></p>
+                <p>Contact: <a href="mailto:abhilash.shakti@gmail.com">abhilash.shakti@gmail.com</a></p>
+            </div>
         </section>
-        <section id="skills">
-            <h2>Skills</h2>
-            <p>Here are some of my skills...</p>
+        <section id="projects" class="section">
+            <div class="container">
+                <h2>Projects</h2>
+                <p>Here are some of my projects...</p>
+            </div>
         </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Get in touch with me...</p>
+        <section id="skills" class="section">
+            <div class="container">
+                <h2>Skills</h2>
+                <p>Here are some of my skills...</p>
+            </div>
+        </section>
+        <section id="contact" class="section">
+            <div class="container">
+                <h2>Contact</h2>
+                <p>Feel free to reach out to me at <a href="mailto:abhilash.shakti@gmail.com">abhilash.shakti@gmail.com</a></p>
+            </div>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Abhilash Srivastava</p>
+        <div class="container">
+            <p>&copy; 2023 Abhilash Srivastava. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
