--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class=" header hed">
         <nav  class="navbar h-nav-resp">
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -28,8 +28,8 @@
     <main>
         <section id="home" class="section home-section">
             <div class="container">
-                <h1>Abhilash Srivastava</h1>
                 <img src="images/profile.png" alt="Profile Photo" class="profile-photo-large">
+                <h1>Hi, I’m <span class="red">Abhilash Srivastava</span> <br> I am <span class="auto-input"></span></h1>
                 <p>I specialize in building Generative AI applications with a focus on Natural Language Processing (NLP), Machine Learning, Search, and Recommender Systems. Currently, I lead conversation focused machine learning initiatives at Apollo.io, where I develop 0-to-1 sales tech products that drive revenue and innovation.</p>
                 <p>Previously, I delivered high-impact, consumer-facing projects at Meta, Microsoft, Yelp, and Samsung Research. My work spans diverse domains, including Ads Integrity, Search Engines, Content Understanding, and IoT. At Meta, I developed fraud detection systems that improved Facebook Ads' revenue, while at Microsoft, I enhanced Search through Query Understanding and Natural Language Understanding (NLU). Additionally, I contribute to the AI4A (AI for Accessibility) Grants committee and am a reviewer for MLADS (Microsoft ML and Data Science Conference).</p>
                 <p>Throughout my career, I've secured multiple patents and published papers in international conferences. I’m passionate about EdTech and MOOCs, and I actively engage with the Coursera and PyTorch communities.</p>
@@ -219,6 +219,7 @@
         </div>
     </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script src="script.js"></script>
 
 </html>
