--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class=" header hed">
-        <nav  class="navbar h-nav-resp">
+    <header class="header hed">
+        <nav class="navbar h-nav-resp">
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
+                <li><a href="Abhilash_Srivastava_ML_Oct2024.pdf" target="_blank">CV</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#blog">Blogs</a></li>
             </ul>
