--- a/index.html
+++ b/index.html
@@ -6,21 +6,20 @@
     <title>Abhilash Srivastava - Personal Website</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
-    <header class="header hed">
-        <nav class="navbar h-nav-resp">
+    <header class=" header hed">
+        <nav  class="navbar h-nav-resp">
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="docs/Abhilash_Srivastava_ML_Oct2024.pdf" target="_blank">CV</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#blog">Blogs</a></li>
-                <li><a href="#internship">Internship</a></li>
-                <li><a href="#teaching">Teaching</a></li>
-                <li><a href="#volunteering">Volunteering</a></li>
+                <li><a href="Form/contact.html">Contact Us</a></li>
+                <li><a href="/blog.html">Blogs</a></li>
+                <li><a href="Abhilash_Srivastava_ML_Oct2024.pdf" target="_blank">CV</a></li>
             </ul>
         </nav>
         <div id="burger">
@@ -186,53 +185,46 @@
                 <p>LinkedIn: <a href="https://www.linkedin.com/in/abhilash-srivastava/">linkedin.com/in/abhilash-srivastava</a></p>
             </div>
         </section>
-        <section id="internship" class="section internship-section">
-            <div class="container">
-                <h2>Internship</h2>
-                <p>Details about my internships...</p>
-            </div>
-        </section>
-        <section id="teaching" class="section teaching-section">
-            <div class="container">
-                <h2>Teaching</h2>
-                <p>Details about my teaching experience...</p>
-            </div>
-        </section>
-        <section id="volunteering" class="section volunteering-section">
-            <div class="container">
-                <h2>Volunteering</h2>
-                <p>Details about my volunteering activities...</p>
-            </div>
-        </section>
-        <section id="blog" class="section blog-section">
-            <div class="container">
-                <h2>Blog</h2>
-                <p>Welcome to my blog! Here, I share my thoughts on AI, technology, machine learning, and more.</p>
-
-                <!-- Search bar -->
-                <input type="text" id="blogSearch" placeholder="Search blog posts..." onkeyup="searchBlogs()" class="blog-search-bar">
-
-                <!-- Blog Post Entries -->
-                <div class="blog-post" data-title="How Generative AI is Shaping the Future" data-content="Generative AI is revolutionizing industries from content creation to business automation. In this post, I discuss how AI is changing the way we work and live.">
-                    <h3><a href="#post1">How Generative AI is Shaping the Future</a></h3>
-                    <p>Generative AI is revolutionizing industries from content creation to business automation. In this post, I discuss how AI is changing the way we work and live.</p>
-                    <a href="#post1">Read More</a>
-                </div>
-                <div class="blog-post" data-title="The Future of NLP: Trends to Watch" data-content="Natural Language Processing (NLP) is evolving rapidly. In this article, I explore the latest trends in NLP and their potential applications in various sectors.">
-                    <h3><a href="#post2">The Future of NLP: Trends to Watch</a></h3>
-                    <p>Natural Language Processing (NLP) is evolving rapidly. In this article, I explore the latest trends in NLP and their potential applications in various sectors.</p>
-                    <a href="#post2">Read More</a>
-                </div>
-                <div class="blog-post" data-title="My Experience with OpenAI's GPT-4" data-content="In this post, I dive into my experience using GPT-4 for various tasks, from content generation to code completion, and the potential it has to change the landscape of AI.">
-                    <h3><a href="#post3">My Experience with OpenAI's GPT-4</a></h3>
-                    <p>In this post, I dive into my experience using GPT-4 for various tasks, from content generation to code completion, and the potential it has to change the landscape of AI.</p>
-                    <a href="#post3">Read More</a>
-                </div>
-            </div>
-        </section>
     </main>
+
+<!-- blog section -->
+<section id="blog" class="section blog-section">
+    <div class="container">
+        <h2>Blog</h2>
+        <p>Welcome to my blog! Here, I share my thoughts on AI, technology, machine learning, and more.</p>
+
+        <!-- Search bar -->
+        <input type="text" id="blogSearch" placeholder="Search blog posts..." onkeyup="searchBlogs()" class="blog-search-bar">
+
+        <!-- Blog Post Entries -->
+        <div class="blog-post" data-title="How Generative AI is Shaping the Future" data-content="Generative AI is revolutionizing industries from content creation to business automation. In this post, I discuss how AI is changing the way we work and live.">
+            <h3><a href="blog.html">How Generative AI is Shaping the Future</a></h3>
+            <p>Generative AI is revolutionizing industries from content creation to business automation. In this post, I discuss how AI is changing the way we work and live.</p>
+            <a href="blog.html">Read More</a>
+        </div>
+        <div class="blog-post" data-title="The Future of NLP: Trends to Watch" data-content="Natural Language Processing (NLP) is evolving rapidly. In this article, I explore the latest trends in NLP and their potential applications in various sectors.">
+            <h3><a href="blog.html">The Future of NLP: Trends to Watch</a></h3>
+            <p>Natural Language Processing (NLP) is evolving rapidly. In this article, I explore the latest trends in NLP and their potential applications in various sectors.</p>
+            <a href="blog.html">Read More</a>
+        </div>
+        <div class="blog-post" data-title="My Experience with OpenAI's GPT-4" data-content="In this post, I dive into my experience using GPT-4 for various tasks, from content generation to code completion, and the potential it has to change the landscape of AI.">
+            <h3><a href="blog.html">My Experience with OpenAI's GPT-4</a></h3>
+            <p>In this post, I dive into my experience using GPT-4 for various tasks, from content generation to code completion, and the potential it has to change the landscape of AI.</p>
+            <a href="blog.html">Read More</a>
+        </div>
+    </div>
+</section>
+
+    
     <footer>
         <div class="container">
+            <div class="social-icons">
+                <a href="https://www.linkedin.com/in/abhilash-srivastava"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/abhilashsri7" ><i class="fab fa-instagram"></i></a>
+                <a href="https://github.com/abhilashshakti" ><i class="fab fa-github"></i></a>
+                <a href="abhilash.shakti@gmail.com"><i class="fas fa-envelope"></i></a>
+            </div>
+            
             <p>&copy; 2024 Abhilash Srivastava. All rights reserved.</p>
         </div>
     </footer>
