--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="Form/contact.html">Contact Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="#blog">Blogs</a></li>
                 <li><a href="Abhilash_Srivastava_ML_Oct2024.pdf" target="_blank">CV</a></li>
             </ul>
@@ -54,7 +54,7 @@
                 <a href="https://www.linkedin.com/in/abhilash-srivastava"><i class="fab fa-linkedin"></i></a>
                 <a href="https://www.instagram.com/abhilashsri7" ><i class="fab fa-instagram"></i></a>
                 <a href="https://github.com/abhilashshakti" ><i class="fab fa-github"></i></a>
-                <a href="abhilash.shakti@gmail.com"><i class="fas fa-envelope"></i></a>
+                <a href="mailto:abhilash.shakti@gmail.com"><i class="fas fa-envelope"></i></a>
             </div>
             
             <p>&copy; 2024 Abhilash Srivastava. All rights reserved.</p>
