--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="Form/contact.html">Contact Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="/blog.html">Blogs</a></li>
                 <li><a href="Abhilash_Srivastava_ML_Oct2024.pdf" target="_blank">CV</a></li>
             </ul>
@@ -186,35 +186,6 @@
             </div>
         </section>
     </main>
-
-<!-- blog section -->
-<section id="blog" class="section blog-section">
-    <div class="container">
-        <h2>Blog</h2>
-        <p>Welcome to my blog! Here, I share my thoughts on AI, technology, machine learning, and more.</p>
-
-        <!-- Search bar -->
-        <input type="text" id="blogSearch" placeholder="Search blog posts..." onkeyup="searchBlogs()" class="blog-search-bar">
-
-        <!-- Blog Post Entries -->
-        <div class="blog-post" data-title="How Generative AI is Shaping the Future" data-content="Generative AI is revolutionizing industries from content creation to business automation. In this post, I discuss how AI is changing the way we work and live.">
-            <h3><a href="blog.html">How Generative AI is Shaping the Future</a></h3>
-            <p>Generative AI is revolutionizing industries from content creation to business automation. In this post, I discuss how AI is changing the way we work and live.</p>
-            <a href="blog.html">Read More</a>
-        </div>
-        <div class="blog-post" data-title="The Future of NLP: Trends to Watch" data-content="Natural Language Processing (NLP) is evolving rapidly. In this article, I explore the latest trends in NLP and their potential applications in various sectors.">
-            <h3><a href="blog.html">The Future of NLP: Trends to Watch</a></h3>
-            <p>Natural Language Processing (NLP) is evolving rapidly. In this article, I explore the latest trends in NLP and their potential applications in various sectors.</p>
-            <a href="blog.html">Read More</a>
-        </div>
-        <div class="blog-post" data-title="My Experience with OpenAI's GPT-4" data-content="In this post, I dive into my experience using GPT-4 for various tasks, from content generation to code completion, and the potential it has to change the landscape of AI.">
-            <h3><a href="blog.html">My Experience with OpenAI's GPT-4</a></h3>
-            <p>In this post, I dive into my experience using GPT-4 for various tasks, from content generation to code completion, and the potential it has to change the landscape of AI.</p>
-            <a href="blog.html">Read More</a>
-        </div>
-    </div>
-</section>
-
     
     <footer>
         <div class="container">
@@ -222,7 +193,7 @@
                 <a href="https://www.linkedin.com/in/abhilash-srivastava"><i class="fab fa-linkedin"></i></a>
                 <a href="https://www.instagram.com/abhilashsri7" ><i class="fab fa-instagram"></i></a>
                 <a href="https://github.com/abhilashshakti" ><i class="fab fa-github"></i></a>
-                <a href="abhilash.shakti@gmail.com"><i class="fas fa-envelope"></i></a>
+                <a href="mailto:abhilash.shakti@gmail.com"><i class="fas fa-envelope"></i></a>
             </div>
             
             <p>&copy; 2024 Abhilash Srivastava. All rights reserved.</p>
