--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="/blog.html">Blogs</a></li>
-                    <li><a href="Abhilash_Srivastava_ML_Oct2024.pdf" target="_blank">CV</a></li>
+                    <li><a href="docs/Abhilash_Srivastava_ML_Oct2024.pdf" target="_blank">CV</a></li>
                 </ul>
             </nav>
             <div id="burger">
@@ -33,7 +33,7 @@
             <section id="home" class="section home-section">
                 <div class="container">
                     <img src="images/profile.png" alt="Profile Photo" class="profile-photo-large">
-                    <h1>Hi, I’m <span class="red">Abhilash Srivastava</span> <br> I am <span class="auto-input"></span></h1>
+                    <h1>Hi, I’m <span class="name">Abhilash Srivastava</span> <br> I am <span class="auto-input"></span></h1>
                     <p>I specialize in building Generative AI applications with a focus on Natural Language Processing (NLP), Machine Learning, Search, and Recommender Systems. Currently, I lead conversation focused machine learning initiatives at Apollo.io, where I develop 0-to-1 sales tech products that drive revenue and innovation.</p>
                     <p>Previously, I delivered high-impact, consumer-facing projects at Meta, Microsoft, Yelp, and Samsung Research. My work spans diverse domains, including Ads Integrity, Search Engines, Content Understanding, and IoT. At Meta, I developed fraud detection systems that improved Facebook Ads' revenue, while at Microsoft, I enhanced Search through Query Understanding and Natural Language Understanding (NLU). Additionally, I contribute to the AI4A (AI for Accessibility) Grants committee and am a reviewer for MLADS (Microsoft ML and Data Science Conference).</p>
                     <p>Throughout my career, I've secured multiple patents and published papers in international conferences. I’m passionate about EdTech and MOOCs, and I actively engage with the Coursera and PyTorch communities.</p>
