hide some elements for now

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#experience">Experience</a></li>
-                    <li><a href="#projects">Projects</a></li>
+                    <!-- <li><a href="#projects">Projects</a></li> -->
                     <li><a href="#skills">Skills</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="/blog.html">Blogs</a></li>
+                    <!-- <li><a href="contact.html">Contact</a></li> -->
+                    <!-- <li><a href="/blog.html">Blogs</a></li> -->
                     <li><a href="docs/Abhilash_Srivastava_ML_Oct2024.pdf" target="_blank">CV</a></li>
                 </ul>
             </nav>
@@ -159,12 +159,12 @@
                     </div>
                 </div>
             </section>
-            <section id="projects" class="section projects-section">
+            <!-- <section id="projects" class="section projects-section">
                 <div class="container">
                     <h2>Projects</h2>
                     <p>Here are some of my projects...</p>
                 </div>
-            </section>
+            </section> -->
             <section id="skills" class="section skills-section">
                 <div class="container">
                     <h2>Skills</h2>
