--- a/index.html
+++ b/index.html
@@ -239,16 +239,18 @@
                 <p class="text-center" style="max-width: 600px; margin: 0 auto 3rem;">
                     Interested in AI, EdTech, or exploring innovative machine learning solutions? I'd love to hear from you.
                 </p>
-                <form id="contact-form" class="contact-form">
+                <form id="contact-form" class="contact-form" action="https://formspree.io/f/xnnvbqee" method="POST">
                     <div class="form-group">
                         <input type="text" id="name" name="name" placeholder="Your Name" required>
                     </div>
                     <div class="form-group">
-                        <input type="email" id="email" name="email" placeholder="Your Email" required>
+                        <input type="email" id="email" name="_replyto" placeholder="Your Email" required>
                     </div>
                     <div class="form-group">
                         <textarea id="message" name="message" placeholder="Your Message" required></textarea>
                     </div>
+                    <input type="hidden" name="_subject" value="New message from abhilashsri.in">
+                    <input type="hidden" name="_next" value="https://abhilashsri.in#contact">
                     <button type="submit" class="submit-btn">
                         <i class="fas fa-paper-plane"></i>
                         Send Message
