Add university logos and standardize all logo styling - UC San Diego seal, BITS Pilani logo, consistent 80px sizing, clean filename conventions

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#experience">Experience</a></li>
+                <li><a href="#education">Education</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -70,7 +71,7 @@
                 <div class="experience-item">
                     <div class="experience-header">
                         <div class="experience-left">
-                            <img src="images/apollo-logo.png" alt="Apollo.io" class="company-logo">
+                            <img src="images/apollo-logo.svg" alt="Apollo.io" class="company-logo">
                             <div class="experience-details">
                                 <h3>Apollo.io</h3>
                                 <h4>Senior ML Engineer</h4>
@@ -173,6 +174,54 @@
                         <li><strong>Global Collaboration:</strong> Worked across South Korea, Germany, China, and India for successful commercialization</li>
                         <li><strong>Voice Integration:</strong> Assisted in enabling voice support through Samsung Voice integration</li>
                         <li><strong>Education Platform:</strong> Developed Screen Sharing feature for Samsung School v2.0 using Real Time Protocol</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section id="education" class="section education-section">
+            <div class="container">
+                <h2 class="text-center">Education</h2>
+                
+                <div class="education-item">
+                    <div class="education-header">
+                        <div class="education-left">
+                            <img src="images/ucsd-seal.png" alt="UC San Diego" class="university-logo">
+                            <div class="education-details">
+                                <h3>UC San Diego</h3>
+                                <h4>Master of Science (MS), Computer Science</h4>
+                            </div>
+                        </div>
+                        <div class="education-right">
+                            <p>2017 - 2019</p>
+                        </div>
+                    </div>
+                    <p><strong>Specialization:</strong> Artificial Intelligence and Human Computer Interaction</p>
+                    <ul>
+                        <li><strong>Activities:</strong> Active member of the UCSD Alumni Association</li>
+                        <li><strong>Consulting:</strong> Advanced Professional Degree Consulting Club (APDCC)</li>
+                        <li><strong>Focus Areas:</strong> Machine Learning, Computer Vision, Natural Language Processing</li>
+                    </ul>
+                </div>
+
+                <div class="education-item">
+                    <div class="education-header">
+                        <div class="education-left">
+                            <img src="images/bits-pilani-logo.png" alt="BITS Pilani" class="university-logo">
+                            <div class="education-details">
+                                <h3>Birla Institute of Technology and Science, Pilani</h3>
+                                <h4>Bachelor of Engineering (B.E.), Computer Science</h4>
+                            </div>
+                        </div>
+                        <div class="education-right">
+                            <p>2010 - 2014</p>
+                        </div>
+                    </div>
+                    <p><strong>Foundation:</strong> Computer Science Engineering with focus on Software Development</p>
+                    <ul>
+                        <li><strong>Core Studies:</strong> Data Structures, Algorithms, Software Engineering</li>
+                        <li><strong>Programming:</strong> C++, Java, Python, Database Management</li>
+                        <li><strong>Projects:</strong> Web Development, Android Applications, System Design</li>
                     </ul>
                 </div>
             </div>
