--- a/contact.html
+++ b/contact.html
@@ -97,9 +97,10 @@
         <nav  class="navbar h-nav-resp">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#skills">Skills</a></li>
+                <li><a href="index.html#experience">Experience</a></li>
+                <li><a href="index.html#education">Education</a></li>
+                <li><a href="index.html#skills">Skills</a></li>
+                <li><a href="index.html#projects">Projects</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="docs/Abhilash_Srivastava_ML_Apr2025.pdf" target="_blank">CV</a></li>
             </ul>
