Fix Formspree production issues - improve error handling, add fallback to native submission, remove problematic redirect fields

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                         <textarea id="message" name="message" placeholder="Your Message" required></textarea>
                     </div>
                     <input type="hidden" name="_subject" value="New message from abhilashsri.in">
-                    <input type="hidden" name="_next" value="https://abhilashsri.in#contact">
+                    <input type="hidden" name="_captcha" value="false">
                     <button type="submit" class="submit-btn">
                         <i class="fas fa-paper-plane"></i>
                         Send Message
