Comprehensive SEO optimization - add meta tags, Open Graph, Twitter Cards, JSON-LD structured data, sitemap.xml, robots.txt for better search engine visibility and social media sharing

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    
+    <!-- SEO Meta Tags -->
+    <title>Contact Abhilash Srivastava - Machine Learning Engineer</title>
+    <meta name="description" content="Get in touch with Abhilash Srivastava, Senior ML Engineer specializing in AI, NLP, and Search Engines. Available for collaborations and opportunities.">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://abhilashsri.in/contact.html">
     <style>
         /* Basic styling for the form container */
 .contact-form-container {
