--- a/contact.html
+++ b/contact.html
@@ -102,6 +102,7 @@
         <nav  class="navbar h-nav-resp">
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#featured-project">Featured Project</a></li>
                 <li><a href="index.html#experience">Experience</a></li>
                 <li><a href="index.html#education">Education</a></li>
                 <li><a href="index.html#skills">Skills</a></li>
